# macos-cad-kernel-api

./: .gitmodules  AGENTS.md  APPLE-2.md  APPLE.md  CMakeLists.txt  cad_abi.h  occ_apple.h  occ_apple.mm  occ_c.cpp  occ_c.h  occ_defs.h
test/: occ_c_test_fixture.mm
