cmake_minimum_required(VERSION 3.24)

project(occ_c LANGUAGES CXX)

add_library(occ_c SHARED occ_c.cpp)
target_sources(occ_c PUBLIC occ_c.h occ_defs.h occ_apple.h)
target_compile_features(occ_c PRIVATE cxx_std_17)
target_compile_definitions(occ_c PRIVATE OCC_C_BUILD)
target_include_directories(occ_c PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

option(OCC_C_USE_INSTALLED_OCCT "Use find_package(OpenCASCADE) instead of reference/OCCT" OFF)

if(OCC_C_USE_INSTALLED_OCCT)
  find_package(OpenCASCADE CONFIG REQUIRED)
  target_include_directories(occ_c PRIVATE ${OpenCASCADE_INCLUDE_DIR})
  target_link_libraries(occ_c PRIVATE ${OpenCASCADE_LIBRARIES})
else()
  set(OCC_C_OCCT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/reference/OCCT" CACHE PATH "OCCT source tree")
  set(OCC_C_OCCT_LIBRARY_DIR "" CACHE PATH "Directory containing built OCCT libraries")
  set(OCC_C_OCCT_LIBRARIES "TKernel;TKMath;TKG2d;TKG3d;TKGeomBase;TKBRep;TKGeomAlgo;TKTopAlgo;TKPrim;TKBO;TKBool;TKShHealing;TKMesh" CACHE STRING "OCCT libraries")
  include("${OCC_C_OCCT_SOURCE_DIR}/adm/cmake/version.cmake")
  string(TIMESTAMP OCC_VERSION_DATE "%Y-%m-%d")
  if(OCC_VERSION_DEVELOPMENT)
    set(SET_OCC_VERSION_DEVELOPMENT "#define OCC_VERSION_DEVELOPMENT \"${OCC_VERSION_DEVELOPMENT}\"")
  else()
    set(SET_OCC_VERSION_DEVELOPMENT "")
  endif()
  configure_file("${OCC_C_OCCT_SOURCE_DIR}/adm/templates/Standard_Version.hxx.in" "${CMAKE_CURRENT_BINARY_DIR}/occt-generated/Standard_Version.hxx" @ONLY)
  file(GLOB_RECURSE OCC_C_OCCT_HEADERS CONFIGURE_DEPENDS "${OCC_C_OCCT_SOURCE_DIR}/src/*.hxx" "${OCC_C_OCCT_SOURCE_DIR}/src/*.lxx" "${OCC_C_OCCT_SOURCE_DIR}/src/*.gxx")
  set(OCC_C_OCCT_INCLUDE_DIRS "${CMAKE_CURRENT_BINARY_DIR}/occt-generated")
  foreach(header ${OCC_C_OCCT_HEADERS})
    get_filename_component(header_dir "${header}" DIRECTORY)
    list(APPEND OCC_C_OCCT_INCLUDE_DIRS "${header_dir}")
  endforeach()
  list(REMOVE_DUPLICATES OCC_C_OCCT_INCLUDE_DIRS)
  target_include_directories(occ_c PRIVATE ${OCC_C_OCCT_INCLUDE_DIRS})
  if(OCC_C_OCCT_LIBRARY_DIR)
    target_link_directories(occ_c PRIVATE "${OCC_C_OCCT_LIBRARY_DIR}")
  endif()
  target_link_libraries(occ_c PRIVATE ${OCC_C_OCCT_LIBRARIES})
endif()
